# BPMHelper

./: CMakeLists.txt  README.md  rrun.bat  run.bat
headers/: AverageCounter.h  BPMHelper.h  Credits.h  include.h  includeCredits.h
sources/: AverageCounter.cpp  BPMHelper.cpp  Credits.cpp  main.cpp  mainCredits.cpp
